# interview-assignments

./: .eslintignore  .eslintrc.js  .gitignore  .gitmodules  .htaccess  .project  20210823@燃果+段新建+JAVA.md  2022-1-18-data.json  AbstractBaseExceptionEnum.java  AopConfig.java  CacheConfig.java  Carousel.test.tsx  Carousel.tsx  ErrorResponseData.java  GlobalExceptionHandler.java  HELP.md  HttpServletUtil.java  ITSupportEngineer-jd.md  IdUtil.java  Java Assignment.rar  LUrl_entity.java  LogAop.java  LogFactory.java  LogManager.java  LogTaskFactory.java  MUtil.java  MemoryCacheOperator.java  MultiBaseConvertUtil.java  Podfile  Q1_log_search.awk  Q2 window环境下使用powershell分析日志  Q2.md  README.md  README.txt  RequestNoContext.java  RequestNoFilter.java  ResponseData.java  ServerExceptionEnum.java  ServiceException.java  ShortUrl.java  (+85 more)
.github/: secret_scanning.yml
ITSupportEngineer/: README.md  get-log.ps1
RedwoodTestProject/: ContentView.swift  RedwoodTestProjectApp.swift
RedwoodTestProject.xcodeproj/: project.pbxproj
RedwoodTestProject.xcworkspace/: contents.xcworkspacedata
RedwoodTestProjectTests/: RedwoodTestProjectTests.swift
backend/: .dockerignore  (+39 more)
dev-ops/devops-assignment-q2/: .editorconfig  .gitignore  Dockerfile  README.md  setup.cfg  task-definition.json
dev-ops/devops-assignment-q2/.github/workflows/: aws.yml
dev-ops/devops-assignment-q2/app/: __init__.py
dev-ops/devops-assignment-q2/q2-aws-cdk/: README.md  app.py  setup.py
dev-ops/devops-assignment-q2/q2-aws-cdk/q2_aws_cdk/: q2_aws_cdk_stack.py
dev-ops/devops-assignment-q2/tests/: test_case.py
(+20004 files in other folders)
