[metadata]
name = DevOps Assignment Q2
author = Pengjie Song
url = https://github.com/spengjie/devops-assignment-q2

[flake8]
max-line-length = 99

[options]
packages = find:
python_requires = >= 3.6
install_requires =
    flask

[options.extras_require]
test =
    coverage
    pytest

[tool:pytest]
testpaths = tests
python_classes = test_*

[coverage:report]
show_missing = true
